--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "automerge": "^0.7.1",
-    "graphlib-json-graph": "^1.0.0"
+    "graphlib-json-graph": "^1.0.0",
+    "isobject": "^3.0.1"
   },
   "devDependencies": {
     "@types/deepmerge": "^1.3.3",
