--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "automerge-graph",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Automerge on graphlib via json-graph-lib",
   "main": "dist",
   "scripts": {
@@ -19,13 +19,17 @@
   "dependencies": {
     "automerge": "^0.7.1",
     "graphlib-json-graph": "^1.0.0",
-    "isobject": "^3.0.1"
+    "isobject": "^3.0.1",
+    "ngraph.fromjson": "^0.1.9",
+    "ngraph.graph": "0.0.14",
+    "ngraph.tojson": "^0.1.4"
   },
   "devDependencies": {
     "@types/deepmerge": "^1.3.3",
+    "@types/graphlib": "^2.1.4",
+    "@types/jest": "^22.1.4",
     "@types/node": "^9.4.6",
     "jest": "^22.4.2",
-    "@types/jest": "^22.1.4",
     "ts-jest": "^22.4.1",
     "typescript": "^2.7.2"
   },
