--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "isobject": "^3.0.1",
     "ngraph.fromjson": "^0.1.9",
     "ngraph.graph": "0.0.14",
-    "ngraph.tojson": "^0.1.4"
+    "ngraph.tojson": "^0.1.4",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "@types/deepmerge": "^1.3.3",
